--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes for The Odin Project</title>
+    <!--<link rel="stylesheet" href="css/stylesheet.css">-->
 </head>
 <body>
-    <h1>Odin recipes</h1>
+    <div class="container">
+        <h1 class="mainHeader">Odin recipes</h1>
+    </div>
+    <div class="container">
+        <div class="block">
+            <a href="recipes/zombieMeatloaf.html">
+                <img src="images/meatloaf.jpg" alt="Zombie meatloaf" width="200" height="200">
+                <p>Zombie Meatloaf</p> 
+            </a>
+        </div>
+    </div>
     
 </body>
