--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
                 <p>Zombie Meatloaf</p> 
             </a>
         </div>
+        <div class="block">
+            <a href="recipes/cupcakes.html">
+                <img src="images/cupcakes.jpeg" alt="Ghost Cupcakes" width="200" height="117">
+                <p>Ghost Cupcakes</p>
+            </a>
+
+        </div>
     </div>
     
 </body>
