--- a/recipes/zombieMeatloaf.html
+++ b/recipes/zombieMeatloaf.html
@@ -5,7 +5,7 @@
         <title>Chief John's zombie meatloaf</title>
     </head>
     <h1>Chef John's Zombie Meatloaf</h1>
-    <img src="../images/meatloaf.jpg" alt="Zombie meatloaf" width="600" height="600"><br>
+    <img src="../images/meatloaf.jpg" alt="Zombie meatloaf" width="70%"><br>
     <h2>Ingredients:</h2>
     <ul>
         <li>½ cup unsalted butter</li>
