--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <img src="images/cupcakes.jpeg" alt="Ghost Cupcakes" width="200" height="117">
                 <p>Ghost Cupcakes</p>
             </a>
-
+        </div>
+        <div class="block">
+            <a href="recipes/BlackVelvetCake.html">
+                <img src="images/cake.jpeg" width="200">
+                <p>Black Velvet Cake</p>
+            </a>
         </div>
     </div>
     
