Added css formatting
Added formatting through css stylesheet common to all pages. Also switched zombie meatloaf picture from square to 16:9 format.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes for The Odin Project</title>
-    <!--<link rel="stylesheet" href="css/stylesheet.css">-->
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1 class="mainHeader">Odin recipes</h1>
+        <h1 class="mainHeader">Odin spooky Halloween recipes</h1>
     </div>
+    <hr>
     <div class="container">
         <div class="block">
             <a href="recipes/zombieMeatloaf.html">
-                <img src="images/meatloaf.jpg" alt="Zombie meatloaf" width="200" height="200">
+                <img src="images/meatloaf.jpg" alt="Zombie meatloaf" width="400">
                 <p>Zombie Meatloaf</p> 
             </a>
         </div>
         <div class="block">
             <a href="recipes/cupcakes.html">
-                <img src="images/cupcakes.jpeg" alt="Ghost Cupcakes" width="200" height="117">
+                <img src="images/cupcakes.jpeg" alt="Ghost Cupcakes" width="400">
                 <p>Ghost Cupcakes</p>
             </a>
         </div>
         <div class="block">
             <a href="recipes/BlackVelvetCake.html">
-                <img src="images/cake.jpeg" width="200">
+                <img src="images/cake.jpeg" width="400">
                 <p>Black Velvet Cake</p>
             </a>
         </div>
