--- a/recipes/BlackVelvetCake.html
+++ b/recipes/BlackVelvetCake.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Black Velvet Cake</title>
+        <link rel="stylesheet" href="../css/stylesheet.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     </head>
     <body>
         <a href="../index.html">Back to home</a><br>
