--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Pull Apart Graveyard Cupcakes</title>
+        <link rel="stylesheet" href="../css/stylesheet.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html">Back to home</a>
+        <a href="../index.html">Back to home</a><br>
         <img src="../images/cupcakes.jpeg" alt="Graveyard Cupcakes" width="70%">
         <h1>Pull Apart Graveyard Cupcakes</h1>
         <h2>Ingredients:</h2>
