Styles for recipes
added selectors for recipes in css file.

--- a/recipes/BlackVelvetCake.html
+++ b/recipes/BlackVelvetCake.html
@@ -8,61 +8,63 @@
         <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html">Back to home</a><br>
-        <img src="../images/cake.jpeg" alt="Black Velvet Cake" width="70%">
-        <h1>Black Velvet Cake</h1>
-        <h2>Ingredients</h2>
-        <h3>For the black velvet cake:</h3>
-        <ul>
-            <li>240ml oil</li>
-            <li>600g caster sugar</li>
-            <li>4 large eggs</li>
-            <li>70g cocoa powder</li>
-            <li>Black food colour (use gel food colour if you can - it provides a darker colour)</li>
-            <li>640g plain flour</li>
-            <li>480ml buttermilk</li>
-            <li>2 tbsp white vinegar</li>
-            <li>2 tsp bicarbonate of soda</li>
-            <li>2 tbsp instant coffee dissolved in 50ml hot water</li>
-            <li>100g grated dark chocolate</li>
-        </ul>
-        <h3>For the frosting:</h3>
-        <ul>
-            <li>500g unsalted butter</li>
-            <li>500g full-fat cream cheese</li>
-            <li>2 tsp vanilla extract</li>
-            <li>600g icing sugar</li>
-            <li>Orange food colour (use gel food colour)</li>
-            <li>200g melted dark chocolate, to drizzle</li>
-            <li>50g melted white chocolate, for the web</li>
-            <li>White chocolate skulls and jelly spiders, to decorate (or any other creepy sweets you like)</li>
-        </ul>
-        <h2>Method</h2>
-        <ol>
-            <li>Pre-heat the oven to 160°C. Grease and line two round 8-inch cake tins.</li>
-            <br>
-            <li>To make the cake, beat together the eggs and sugar until light and fluffy. Next add the oil, buttermilk, vinegar, and black food colour. Mix together the grated chocolate and espresso and then pour into the mixer. Whisk to combine.</li>
-            <br>
-            <li>Sift in the flour, cocoa powder and bicarbonate of soda and whisk until smooth.</li>
-            <br>
-            <li>Pour the batter into the tins and bake for 60 minutes or until a skewer inserted into the cake comes out clean.</li>
-            <br>
-            <li>Remove from the oven and allow the cakes to cool in the tin for 10 minutes. Run a knife around the edges of cakes to loosen them and invert onto a wire rack. Tip: a piece of bread on top of your cakes will keep them moist as they cool.</li>
-            <br>
-            <li>Once cooled completely, trim the cakes if the tops are domed and cut each cake in half so you have four sponges.</li>
-            <br>
-            <li>In a mixer, whip the butter until pale and fluffy. Add the cream cheese and whip again. Add the icing sugar and beat on a high speed until really pale. Next, add the vanilla extract and orange food colour.</li>
-            <br>
-            <li>To assemble the cake, layer up the sponges with icing and cover the entire cake too.</li>
-            <br>
-            <li>Place the cake in the fridge for at least 30 minutes.</li>
-            <br>
-            <li>Pour over the cooled melted dark chocolate and allow it to drizzle down the sides of the cake - the messier the better.</li>
-            <br>
-            <li>Place the melted white chocolate in a squeezy bottle and swirl a spiral on top of the dark chocolate. Use a cocktail stick to make a web pattern by dragging the white chocolate through the dark.</li>
-            <br>
-            <li>Decorate with any creepy treats you like. We used white chocolate skulls (used by setting melted chocolate in a skull mould) and jelly spiders.</li>
-        </ol>
-        <a href="../index.html">Back to home</a>
+        <div class="recipes">
+            <a href="../index.html">Back to home</a><br>
+            <img src="../images/cake.jpeg" alt="Black Velvet Cake" width="70%">
+            <h1>Black Velvet Cake</h1>
+            <h2>Ingredients</h2>
+            <h3>For the black velvet cake:</h3>
+            <ul>
+                <li>240ml oil</li>
+                <li>600g caster sugar</li>
+                <li>4 large eggs</li>
+                <li>70g cocoa powder</li>
+                <li>Black food colour (use gel food colour if you can - it provides a darker colour)</li>
+                <li>640g plain flour</li>
+                <li>480ml buttermilk</li>
+                <li>2 tbsp white vinegar</li>
+                <li>2 tsp bicarbonate of soda</li>
+                <li>2 tbsp instant coffee dissolved in 50ml hot water</li>
+                <li>100g grated dark chocolate</li>
+            </ul>
+            <h3>For the frosting:</h3>
+            <ul>
+                <li>500g unsalted butter</li>
+                <li>500g full-fat cream cheese</li>
+                <li>2 tsp vanilla extract</li>
+                <li>600g icing sugar</li>
+                <li>Orange food colour (use gel food colour)</li>
+                <li>200g melted dark chocolate, to drizzle</li>
+                <li>50g melted white chocolate, for the web</li>
+                <li>White chocolate skulls and jelly spiders, to decorate (or any other creepy sweets you like)</li>
+            </ul>
+            <h2>Method</h2>
+            <ol>
+                <li>Pre-heat the oven to 160°C. Grease and line two round 8-inch cake tins.</li>
+                <br>
+                <li>To make the cake, beat together the eggs and sugar until light and fluffy. Next add the oil, buttermilk, vinegar, and black food colour. Mix together the grated chocolate and espresso and then pour into the mixer. Whisk to combine.</li>
+                <br>
+                <li>Sift in the flour, cocoa powder and bicarbonate of soda and whisk until smooth.</li>
+                <br>
+                <li>Pour the batter into the tins and bake for 60 minutes or until a skewer inserted into the cake comes out clean.</li>
+                <br>
+                <li>Remove from the oven and allow the cakes to cool in the tin for 10 minutes. Run a knife around the edges of cakes to loosen them and invert onto a wire rack. Tip: a piece of bread on top of your cakes will keep them moist as they cool.</li>
+                <br>
+                <li>Once cooled completely, trim the cakes if the tops are domed and cut each cake in half so you have four sponges.</li>
+                <br>
+                <li>In a mixer, whip the butter until pale and fluffy. Add the cream cheese and whip again. Add the icing sugar and beat on a high speed until really pale. Next, add the vanilla extract and orange food colour.</li>
+                <br>
+                <li>To assemble the cake, layer up the sponges with icing and cover the entire cake too.</li>
+                <br>
+                <li>Place the cake in the fridge for at least 30 minutes.</li>
+                <br>
+                <li>Pour over the cooled melted dark chocolate and allow it to drizzle down the sides of the cake - the messier the better.</li>
+                <br>
+                <li>Place the melted white chocolate in a squeezy bottle and swirl a spiral on top of the dark chocolate. Use a cocktail stick to make a web pattern by dragging the white chocolate through the dark.</li>
+                <br>
+                <li>Decorate with any creepy treats you like. We used white chocolate skulls (used by setting melted chocolate in a skull mould) and jelly spiders.</li>
+            </ol>
+            <a href="../index.html">Back to home</a>
+        </div>
     </body>
 </html>
