--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -8,69 +8,71 @@
         <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html">Back to home</a><br>
-        <img src="../images/cupcakes.jpeg" alt="Graveyard Cupcakes" width="70%">
-        <h1>Pull Apart Graveyard Cupcakes</h1>
-        <h2>Ingredients:</h2>
-        <h3>For the cupcakes:</h3>
-        <ul>
-            <li>400g plain flour</li>
-            <li>1 tbsp baking powder</li>
-            <li>1 tsp kosher salt</li>
-            <li>170g grape jelly</li>
-            <li>225g granulated sugar</li>
-            <li>4 large eggs at room temperature</li>
-            <li>340g unsalted butter, melted</li>
-            <li>2 tbsps pure vanilla extract</li>
-            <li>230ml milk</li>
-        </ul>
-        <h3>For the frosting:</h3>
-        <ul>
-            <li>280g unsalted butter at room temperature</li>
-            <li>1/4 tsp salt</li>
-            <li>780g icing sugar</li>
-            <li>3 tbsps milk</li>
-            <li>10 chocolate biscuits, coarsely crushed</li>
-        </ul>
-        <h3>For the decorations:</h3>
-        <ul>
-            <li>15 large white marshmallows</li>
-            <li>3 chocolate biscuits, coarsely crushed</li>
-            <li>1 tbsp black or dark green sugar</li>
-            <li>50g orange sugar</li>
-            <li>1 tube of black icing</li>
-            <li>1 tube of green icing</li>
-            <li>5 oval shaped biscuits</li>
-            <li>230g marzipan</li>
-            <li>3 round lollipops, wrapped</li>
-            <li>7 lengths of black liquorice (approx 20cm each)</li>
-        </ul>
-        <h2>Method:</h2>
-        <ol>
-            <li>For the cupcakes, preheat the oven to 180°C. Line two 12 cup muffin tins with paper cupcake liners.</li>
-            <br>
-            <li>Whisk together the flour, baking powder and salt in a bowl. Warm the grape jelly for approximately 20 to 30 seconds in the microwave until loosened, and whisk until smooth. Set aside.</li>
-            <br>
-            <li>Beat together the sugar and eggs in another medium bowl with an electric mixer until light and foamy, about 2 minutes. While beating, gradually pour in the butter and then the vanilla.</li>
-            <br>
-            <li>While mixing slowly, add half the dry ingredients and then all of the milk. Follow with the rest of the dry ingredients, taking care not to over mix the batter.</li>
-            <br>
-            <li>Remove roughly 500g of the batter and stir in the grape jelly. Evenly fill the liners about two-thirds full, alternating the plain batter and grape batter.</li>
-            <br>
-            <li>Bake until a tester inserted in the centre of the cupcakes comes out clean and the tops spring back lightly to the touch, 20 to 22 minutes. Place the pan on a rack to cool for 10 minutes, and then remove the cupcakes to the rack to cool completely, about 1 hour.</li>
-            <br>
-            <li>For the frosting, beat the butter and salt in a large bowl until fluffy and combined. Gradually beat in the icing sugar until smooth and fluffy. Beat in the milk one tablespoon at a time until the frosting has a nice spreadable consistency. Add the crushed cookies and continue to beat until any large chunks are crushed to smaller bits and the frosting has a speckled, greyish look.</li>
-            <br>
-            <li>To decorate, arrange the cupcakes in 4 rows on a large serving plate or cutting board. Fit a marshmallow between each cupcake, 5 marshmallows per row, to fill in the gaps between the cupcakes. Spread the frosting over the whole rectangle so it looks like one cake. Sprinkle with the cookie crumbs and black decorating sugar.</li>
-            <br>
-            <li>To make the tombstones, use the black decorating icing and a small round tip to write 'RIP' or other one-word epitaphs on the top half of the oval sandwich cookies and stick into the cupcakes randomly around the graveyard.</li>
-            <br>
-            <li>To make the ghosts, take two-thirds of the marzipan and place between 2 sheets of wax paper or parchment. Roll about 1/8-inch thick and cut into 3 rounds using a 4-inch biscuit cutter. You may need to gather and re-roll the scraps for all 3 rounds. Drape over the wrapped lollipops and stick into the cupcakes around the tombstone. Using the black decorating icing and the same round tip, dot eyes and a mouth on the ghosts.</li>
-            <br>
-            <li>To make the pumpkins and leaves,  divide the remaining marzipan into 4 small pieces and roll each into a ball. Roll in the orange sugar until coated and place around the graveyard. Use the black icing to pipe a small stem. Fit the tube of green decorating icing with a leaf or ribbon tip to dot bits of green grass poking through the dirt around the graveyard and pumpkins.</li>
-            <br>
-            <li>To make a border, use 6 pieces of the liquorice, trimming to fit, to make a border around the cake, leaving the middle of the front side open. Bend the seventh piece into an upside down 'U' and stick into 2 cupcakes in the front to make an arched gateway.</li>
-        </ol>
-        <a href="../index.html">back to home</a>
+        <div class="recipes">
+            <a href="../index.html">Back to home</a><br>
+            <img src="../images/cupcakes.jpeg" alt="Graveyard Cupcakes" width="70%">
+            <h1>Pull Apart Graveyard Cupcakes</h1>
+            <h2>Ingredients:</h2>
+            <h3>For the cupcakes:</h3>
+            <ul>
+                <li>400g plain flour</li>
+                <li>1 tbsp baking powder</li>
+                <li>1 tsp kosher salt</li>
+                <li>170g grape jelly</li>
+                <li>225g granulated sugar</li>
+                <li>4 large eggs at room temperature</li>
+                <li>340g unsalted butter, melted</li>
+                <li>2 tbsps pure vanilla extract</li>
+                <li>230ml milk</li>
+            </ul>
+            <h3>For the frosting:</h3>
+            <ul>
+                <li>280g unsalted butter at room temperature</li>
+                <li>1/4 tsp salt</li>
+                <li>780g icing sugar</li>
+                <li>3 tbsps milk</li>
+                <li>10 chocolate biscuits, coarsely crushed</li>
+            </ul>
+            <h3>For the decorations:</h3>
+            <ul>
+                <li>15 large white marshmallows</li>
+                <li>3 chocolate biscuits, coarsely crushed</li>
+                <li>1 tbsp black or dark green sugar</li>
+                <li>50g orange sugar</li>
+                <li>1 tube of black icing</li>
+                <li>1 tube of green icing</li>
+                <li>5 oval shaped biscuits</li>
+                <li>230g marzipan</li>
+                <li>3 round lollipops, wrapped</li>
+                <li>7 lengths of black liquorice (approx 20cm each)</li>
+            </ul>
+            <h2>Method:</h2>
+            <ol>
+                <li>For the cupcakes, preheat the oven to 180°C. Line two 12 cup muffin tins with paper cupcake liners.</li>
+                <br>
+                <li>Whisk together the flour, baking powder and salt in a bowl. Warm the grape jelly for approximately 20 to 30 seconds in the microwave until loosened, and whisk until smooth. Set aside.</li>
+                <br>
+                <li>Beat together the sugar and eggs in another medium bowl with an electric mixer until light and foamy, about 2 minutes. While beating, gradually pour in the butter and then the vanilla.</li>
+                <br>
+                <li>While mixing slowly, add half the dry ingredients and then all of the milk. Follow with the rest of the dry ingredients, taking care not to over mix the batter.</li>
+                <br>
+                <li>Remove roughly 500g of the batter and stir in the grape jelly. Evenly fill the liners about two-thirds full, alternating the plain batter and grape batter.</li>
+                <br>
+                <li>Bake until a tester inserted in the centre of the cupcakes comes out clean and the tops spring back lightly to the touch, 20 to 22 minutes. Place the pan on a rack to cool for 10 minutes, and then remove the cupcakes to the rack to cool completely, about 1 hour.</li>
+                <br>
+                <li>For the frosting, beat the butter and salt in a large bowl until fluffy and combined. Gradually beat in the icing sugar until smooth and fluffy. Beat in the milk one tablespoon at a time until the frosting has a nice spreadable consistency. Add the crushed cookies and continue to beat until any large chunks are crushed to smaller bits and the frosting has a speckled, greyish look.</li>
+                <br>
+                <li>To decorate, arrange the cupcakes in 4 rows on a large serving plate or cutting board. Fit a marshmallow between each cupcake, 5 marshmallows per row, to fill in the gaps between the cupcakes. Spread the frosting over the whole rectangle so it looks like one cake. Sprinkle with the cookie crumbs and black decorating sugar.</li>
+                <br>
+                <li>To make the tombstones, use the black decorating icing and a small round tip to write 'RIP' or other one-word epitaphs on the top half of the oval sandwich cookies and stick into the cupcakes randomly around the graveyard.</li>
+                <br>
+                <li>To make the ghosts, take two-thirds of the marzipan and place between 2 sheets of wax paper or parchment. Roll about 1/8-inch thick and cut into 3 rounds using a 4-inch biscuit cutter. You may need to gather and re-roll the scraps for all 3 rounds. Drape over the wrapped lollipops and stick into the cupcakes around the tombstone. Using the black decorating icing and the same round tip, dot eyes and a mouth on the ghosts.</li>
+                <br>
+                <li>To make the pumpkins and leaves,  divide the remaining marzipan into 4 small pieces and roll each into a ball. Roll in the orange sugar until coated and place around the graveyard. Use the black icing to pipe a small stem. Fit the tube of green decorating icing with a leaf or ribbon tip to dot bits of green grass poking through the dirt around the graveyard and pumpkins.</li>
+                <br>
+                <li>To make a border, use 6 pieces of the liquorice, trimming to fit, to make a border around the cake, leaving the middle of the front side open. Bend the seventh piece into an upside down 'U' and stick into 2 cupcakes in the front to make an arched gateway.</li>
+            </ol>
+            <a href="../index.html">back to home</a>
+        </div>
     <body>
 </html>
